--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
             <nav class="navigation">
                 <ul class="header-nav">
                     <li>
-                        <a class="header-nav-link" href="">Студія</a>
+                        <a class="header-nav-link" href="./index.html">Студія</a>
                     </li>
-                    <li><a class="header-nav-link" class="header-nav-link" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="header-nav-link active" class="header-nav-link" href="./portfolio.html">Портфоліо</a></li>
                     <li>
                         <a class="header-nav-link" href="">Контакти</a>
                     </li>
@@ -67,7 +67,11 @@
             <ul class="list">
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="images/tehno.jpg" alt="ноутбук" width="370" height="294">
+            <div class="portfolio-top-wrap">
+                <img src="images/tehno.jpg" alt="ноутбук" width="370" height="294">
+            <p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
         <div class="name-description">
         <h2 class="options-name">Технокряк</h2>
         <p class="options-addition">Веб-сайт</p>
@@ -76,7 +80,11 @@
     </li>
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/poster.jpg" alt="Баскетболісти" width="370" height="294">
+            <div class="portfolio-top-wrap">
+                <img src="./images/poster.jpg" alt="Баскетболісти" width="370" height="294">
+                <p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                    дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
         <div class="name-description">
         <h2 class="options-name">Постер New Orlean vs Golden Star</h2>
         <p class="options-addition">Дизайн</p>
@@ -85,7 +93,12 @@
     </li>
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/restoran.jpg" alt="морська їжа" width="370" height="294">
+            <div class="portfolio-top-wrap">
+<img src="./images/restoran.jpg" alt="морська їжа" width="370" height="294">
+<p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
+        
         <div class="name-description">
         <h2 class="options-name">Ресторан Seafood</h2>
         <p class="options-addition">Додаток</p>
@@ -94,7 +107,12 @@
     </li>
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/proekt.jpg" alt="навушники" width="370" height="294">
+            <div class="portfolio-top-wrap">
+<img src="./images/proekt.jpg" alt="навушники" width="370" height="294">
+<p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
+       
         <div class="name-description">
         <h2 class="options-name">Проєкт Prime</h2>
         <p class="options-addition">Маркетинг</p>
@@ -103,7 +121,11 @@
     </li class="varieties">
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/proektboxes.jpg" alt="Дві коробки" width="370" height="294">
+            <div class="portfolio-top-wrap">
+<img src="./images/proektboxes.jpg" alt="Дві коробки" width="370" height="294">
+<p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
         <div class="name-description">
         <h2 class="options-name">Проєкт Boxes</h2>
         <p class="options-addition">Додаток</p>
@@ -112,7 +134,11 @@
     </li>
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/inspiration.jpg" alt="монітор" width="370" height="294">
+            <div class="portfolio-top-wrap">
+<img src="./images/inspiration.jpg" alt="монітор" width="370" height="294">
+<p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
         <div class="name-description">
         <h2 class="options-name">Inspiration has no Borders</h2>
         <p class="options-addition">Веб-сайт</p>
@@ -121,7 +147,11 @@
     </li>
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/limited_edition.jpg" alt="журнал" width="370" height="294">
+            <div class="portfolio-top-wrap">
+<img src="./images/limited_edition.jpg" alt="журнал" width="370" height="294">
+<p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
         <div class="name-description">
         <h2 class="options-name">Видання Limited Edition</h2>
         <p class="options-addition">Дизайн</p>
@@ -130,7 +160,11 @@
     </li>
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/lab.jpg" alt="лейба" width="370" height="294">
+            <div class="portfolio-top-wrap">
+<img src="./images/lab.jpg" alt="лейба" width="370" height="294">
+<p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
         <div class="name-description">
         <h2 class="options-name">Проєкт LAB</h2>
         <p class="options-addition">Маркетинг</p>
@@ -139,7 +173,11 @@
     </li>
     <li class="varieties">
         <a href="" class="portfolio-link">
-        <img src="./images/growing.jpg" alt="ноутбук руки" width="370" height="294">
+            <div class="portfolio-top-wrap">
+                <img src="./images/growing.jpg" alt="ноутбук руки" width="370" height="294">
+                <p class="portfolio-link-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            </div>
         <div class="name-description">
         <h2 class="options-name">Growing Business</h2>
         <p class="options-addition">Додаток</p>
